--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "commander": "^2.19.0",
+    "chalk": "^2.4.1",
     "glob": "^7.1.3",
     "inquirer": "^6.2.0",
     "inquirer-search-checkbox": "^1.0.0",
@@ -23,8 +23,9 @@
     "type": "git",
     "url": "git+https://github.com/XiongAmao/leetcode.git"
   },
-  "author": "",
+  "author": "XiongAmao <onycat@live.cn>",
   "license": "ISC",
+  "private": true,
   "bugs": {
     "url": "https://github.com/XiongAmao/leetcode/issues"
   },
