--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "fuzzy": "^0.1.3",
     "glob": "^7.1.3",
     "inquirer": "^6.2.0",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "inquirer-search-checkbox": "^1.0.0",
     "jest": "^23.6.0",
     "shelljs": "^0.8.2"
