--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lodash": "^4.17.11",
     "shelljs": "^0.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.0.1"
+  },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
     "test": "node ./test/command.js"
