--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
-    "test": "node ./test/command.js"
+    "test": "node ./test/command.js",
+    "lint": "eslint --fix problems/"
   },
   "repository": {
     "type": "git",
