chore: update dependencies.

--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-plugin-jest": "^22.19.0",
-    "prettier-eslint": "^9.0.0"
+    "eslint": "^6.5.1",
+    "eslint-plugin-jest": "^22.19.0"
   },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
