--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "test": "test"
   },
   "dependencies": {
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.1",
     "fuzzy": "^0.1.3",
-    "glob": "^7.1.4",
-    "inquirer": "^7.0.0",
-    "inquirer-autocomplete-prompt": "^1.0.1",
+    "glob": "^7.1.6",
+    "inquirer": "7.3.3",
+    "inquirer-autocomplete-prompt": "^1.3.0",
     "inquirer-search-checkbox": "^1.0.0",
-    "jest": "^24.9.0",
-    "lodash": "^4.17.15",
-    "shelljs": "^0.8.3"
+    "jest": "^26.6.3",
+    "lodash": "^4.17.21",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-plugin-jest": "^22.19.0"
+    "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5"
   },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
