--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "chalk": "^4.1.1",
-    "fuzzy": "^0.1.3",
-    "glob": "^7.1.6",
-    "inquirer": "7.3.3",
-    "inquirer-autocomplete-prompt": "^1.3.0",
-    "inquirer-search-checkbox": "^1.0.0",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.21",
-    "shelljs": "^0.8.4"
-  },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-plugin-jest": "^24.3.5"
+    "@xiongamao/eslint-config-ts": "^0.1.0",
+    "chalk": "^5.0.1",
+    "eslint": "^8.20.0",
+    "eslint-plugin-jest": "^26.7.0",
+    "fuzzy": "^0.1.3",
+    "globby": "^13.1.2",
+    "inquirer": "9.0.2",
+    "inquirer-autocomplete-prompt": "^2.0.0",
+    "inquirer-search-checkbox": "^1.0.0",
+    "jest": "^28.1.3",
+    "lodash": "^4.17.21",
+    "tsx": "^3.8.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
