--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "devDependencies": {
-    "@xiongamao/eslint-config-ts": "^0.1.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.4",
+    "@xiongamao/eslint-config-ts": "0.2.1",
     "chalk": "^5.0.1",
     "eslint": "^8.20.0",
     "eslint-plugin-jest": "^26.7.0",
@@ -18,12 +20,15 @@
     "inquirer-search-checkbox": "^1.0.0",
     "jest": "^28.1.3",
     "lodash": "^4.17.21",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
     "tsx": "^3.8.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "jest": "jest --findRelatedTests ./test/test.js --colors",
-    "test": "node ./test/command.js",
+    "test": "jest problems",
+    "test:old": "node ./test/command.js",
     "lint": "eslint --fix problems/"
   },
   "repository": {
