--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
+    "@jest/globals": "^28.1.3",
     "@types/node": "^18.6.4",
     "@xiongamao/eslint-config-ts": "0.2.1",
     "chalk": "^5.0.1",
