--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "test": "test"
   },
   "devDependencies": {
     "@jest/globals": "^28.1.3",
     "@types/inquirer": "^9.0.1",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^18.6.4",
     "@xiongamao/eslint-config-ts": "0.2.1",
     "chalk": "^5.0.1",
